--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                 const videoData = await videoResponse.json();
 
                 if (videoData.items.length > 0) {
-                    config.youtube_channel_id = videoData.items[0].id.videoId;
+                    config.youtube_live_video_id = videoData.items[0].id.videoId;
                 }
             }
 
             // Conditionally display buttons
-            if (config.youtube_video_id) document.querySelector('.youtube-btn').style.display = 'block';
+            if (config.youtube_live_video_id) document.querySelector('.youtube-btn').style.display = 'block';
             if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
             if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
             if (config.kick_live_id) document.querySelector('.kick-btn').style.display = 'block';
@@ -191,16 +191,16 @@
         async function loadStream(service) {
             const config = await loadConfig();
 
-            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_video_id}?autoplay=1`;
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
             const kickEmbed = `https://kick.com/${config.kick_live_id}/embed`;
 
             const iframe = document.getElementById('live-stream');
 
-            if (service === 'youtube') {
-                iframe.src = youtubeEmbed;
-            } else if (service === 'twitch') {
+            
+            iframe.src = youtubeEmbed;
+            if (service === 'twitch') {
                 iframe.src = twitchEmbed;
             } else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
@@ -238,7 +238,7 @@
         async function loadChat() {
             const config = await loadConfig();
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
