--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
-            const kickEmbed = `https://kick.com/${config.kick_live_id}/embed`;
+            const kickEmbed = `https://player.kick.com/${config.kick_live_id}`;
 
             const iframe = document.getElementById('live-stream');
 
