--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -28,23 +28,23 @@
             flex: 1;
         }
         .stream-container {
-            flex: 3;
+            flex: 3.15; /* Increased by 5% */
             display: flex-start;
             flex-direction: column;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .chat-container {
-            flex: 1;
+            flex: 0.85; /* Decreased by 5% */
             display: flex;
             flex-direction: column;
             height: 100%;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .stream-buttons {
             margin-top: 0;
-			display: flex;
+            display: flex;
             align-items: flex-start;
             justify-content: center;
             margin-bottom: 0;
@@ -52,12 +52,12 @@
         .menu-button {
             background: 1px solid lightgrey;
             color: white;
-			cursor: pointer;
+            cursor: pointer;
             width: 50px;
             height: 50px;
             margin-top: 0;
-			margin-right: 0.5rem;
-			margin-bottom: 0;
+            margin-right: 0.5rem;
+            margin-bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -68,7 +68,8 @@
         }
         .stream-buttons .youtube-btn,
         .stream-buttons .twitch-btn,
-        .stream-buttons .rumble-btn {
+        .stream-buttons .rumble-btn,
+        .stream-buttons .kick-btn {
             flex: 1;
             padding: 0.5rem;
             margin: 0 0.25rem;
@@ -82,6 +83,9 @@
         }
         .stream-buttons .rumble-btn {
             background-color: lightgreen;
+        }
+        .stream-buttons .kick-btn {
+            background-color: #32CD32;
         }
         .tabs {
             display: flex;
@@ -158,49 +162,55 @@
     </style>
     <script>
         async function loadConfig() {
-			const response = await fetch('config.json');
-			const config = await response.json();
+            const response = await fetch('config.json');
+            const config = await response.json();
 
-			const apiKey = config.youtube_api_key; // Add your API key in config.json
-			const channelId = config.youtube_channel_id;
+            // Load YouTube live video ID
+            const apiKey = config.youtube_api_key;
+            const channelId = config.youtube_channel_id;
 
-			const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-			const videoResponse = await fetch(apiUrl);
-			const videoData = await videoResponse.json();
+            if (apiKey && channelId) {
+                const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+                const videoResponse = await fetch(apiUrl);
+                const videoData = await videoResponse.json();
 
-			if (videoData.items.length > 0) {
-				config.youtube_live_video_id = videoData.items[0].id.videoId;
+                if (videoData.items.length > 0) {
+                    config.youtube_live_video_id = videoData.items[0].id.videoId;
+                }
+            }
+
+            // Conditionally display buttons
+            if (config.kick_live_id) document.querySelector('.kick-btn').style.display = 'block';
+            if (config.youtube_channel_id && config.youtube_channel_id.trim() !== "") {
+				document.querySelector('.youtube-btn').style.display = 'block';
 			}
+            if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
+            if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
 
-			return config;
-		}
-
+            return config;
+        }
 
         async function loadStream(service) {
-			const config = await loadConfig();
-			const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
-			const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
-			const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const config = await loadConfig();
 
-			const iframe = document.getElementById('live-stream');
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const kickEmbed = `https://player.kick.com/${config.kick_live_id}`;
 
-			if (service === 'youtube') {
+            const iframe = document.getElementById('live-stream');
+
+            
+            if (service === 'youtube') {
 				iframe.src = youtubeEmbed;
 			} else if (service === 'twitch') {
-				iframe.src = twitchEmbed;
-			} else if (service === 'rumble') {
-				iframe.src = rumbleEmbed;
-			} else {
-				iframe.src = youtubeEmbed;
-
-				iframe.onerror = function() {
-					iframe.src = twitchEmbed;
-					iframe.onerror = function() {
-						iframe.src = rumbleEmbed;
-            };
-        };
-    }
-}
+                iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else if (service === 'kick') {
+                iframe.src = kickEmbed;
+            }
+        }
 
         function switchTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(content => {
@@ -228,6 +238,13 @@
             document.getElementById('sidebar').classList.toggle('active');
         }
 
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+        }
+
         window.onload = async function() {
             await loadStream();
             await loadChat();
@@ -243,17 +260,18 @@
                 <button class="menu-button" onclick="toggleSidebar()">
                     <img src="menu.png" alt="Menu">
                 </button>
-                <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
-                <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
-                <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+                <button class="youtube-btn" style="display:none" onclick="loadStream('youtube')">YouTube</button>
+                <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
+                <button class="rumble-btn" style="display:none" onclick="loadStream('rumble')">Rumble</button>
+                <button class="kick-btn" style="display:none" onclick="loadStream('kick')">Kick</button>
             </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
         <div class="chat-container">
             <div class="tabs">
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
-                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
+                <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
+                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -272,20 +290,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-    <script>
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-        }
-
-        window.onload = async function() {
-            await loadStream();
-            await loadChat();
-            switchTab('twitch-chat');
-            await loadMenu();
-        }
-    </script>
 </body>
 </html>
