--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -184,9 +184,12 @@
             if (config.youtube_channel_id && config.youtube_channel_id.trim() !== "") {
 				document.querySelector('.youtube-btn').style.display = 'block';
 			}
-            if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
-            if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
-
+            if (config.twitch_channel_id && config.twitch_channel_id.trim() !== "") {
+				document.querySelector('.twitch-btn').style.display = 'block';
+			}
+            if (config.rumble_live_id && config.rumble_live_id.trim() !== "") {
+				document.querySelector('.rumble-btn').style.display = 'block';
+			}
             return config;
         }
 
