--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -184,7 +184,7 @@
             if (config.youtube_channel_id && config.youtube_channel_id.trim() !== "") {
 				document.querySelector('.youtube-btn').style.display = 'block';
 			}
-            if (config.twitch_channel_id && config.twitch_channel_id.trim() !== "") {
+            if (config.twitch_channel && config.twitch_channel.trim() !== "") {
 				document.querySelector('.twitch-btn').style.display = 'block';
 			}
             if (config.rumble_live_id && config.rumble_live_id.trim() !== "") {
