--- a/Kirsche/merchandise.html
+++ b/Kirsche/merchandise.html
@@ -69,7 +69,7 @@
         const searchInput = document.getElementById('search-input');
         searchInput.addEventListener('input', (event) => {
             const query = event.target.value;
-            const domains = ['gamersupps', 'uwu market']; // Replace with your desired domains
+            const domains = ['gamersupps.gg', 'uwumarket.us']; // Replace with your desired domains
 
             const filteredResults = filterMerchandise(query, domains);
 
