--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -251,7 +251,7 @@
         }
 
         window.onload = async function() {
-            await loadStream();
+            await loadStream('youtube');
             await loadChat();
             switchTab('twitch-chat');
             await loadMenu();
@@ -274,9 +274,8 @@
         </div>
         <div class="chat-container">
             <div class="tabs">
-                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="../YouTube.png" alt="YouTube Chat"></button>
-                <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="../Rumble.png" alt="Rumble Chat"></button>
+                <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="../Twitch.png" alt="Twitch Chat"></button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -284,8 +283,6 @@
             <div id="youtube-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
             </div>
-            <div id="rumble-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
         </div>
     </main>
