--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -152,18 +152,52 @@
             top: 10px;
             left: 10px;
         }
+
+        /* Carousel styles */
+        .carousel-container {
+            width: 100%;
+            overflow: hidden;
+            background-color: #f8f9fa;
+            padding: 1rem 0;
+        }
+
+        .carousel-track {
+            display: flex;
+            animation: scroll 20s linear infinite;
+        }
+
+        .carousel-item {
+            flex: 0 0 auto;
+            margin: 0 1rem;
+            text-align: center;
+        }
+
+        .carousel-item img {
+            max-width: 150px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+
+        @keyframes scroll {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
     </style>
     <script>
-        let configData = null;  // To store config.json data
-        let menuData = null;    // To store menu.json data
+        let configData = null;
+        let menuData = null;
 
-        // Load config.json only once
+        // Load config.json
         async function loadConfig() {
-            if (!configData) {  // Only fetch if configData hasn't been loaded
+            if (!configData) {
                 const response = await fetch('config.json');
                 configData = await response.json();
 
-                // Load YouTube live video ID
                 const apiKey = configData.youtube_api_key;
                 const channelId = configData.youtube_channel_id;
 
@@ -177,23 +211,22 @@
                     }
                 }
 
-                // Conditionally display buttons
-                if (configData.twitch_channel && configData.twitch_channel.trim() !== "") {
+                if (configData.twitch_channel) {
                     document.querySelector('.twitch-btn').style.display = 'block';
                 }
-                if (configData.kick_live_id && configData.kick_live_id.trim() !== "") {
+                if (configData.kick_live_id) {
                     document.querySelector('.kick-btn').style.display = 'block';
                 }
-                if (configData.youtube_channel_id && configData.youtube_channel_id.trim() !== "") {
+                if (configData.youtube_channel_id) {
                     document.querySelector('.youtube-btn').style.display = 'block';
                 }
             }
             return configData;
         }
 
-        // Load menu.json only once
+        // Load menu.json
         async function loadMenu() {
-            if (!menuData) {  // Only fetch if menuData hasn't been loaded
+            if (!menuData) {
                 const response = await fetch('menu.json');
                 menuData = await response.json();
             }
@@ -210,29 +243,48 @@
             });
         }
 
-        // Stream loader using configData
+        // Load merchandise JSON and populate the carousel
+        async function loadMerch() {
+            const response = await fetch('merch.json');
+            const merchData = await response.json();
+
+            const carouselTrack = document.querySelector('.carousel-track');
+
+            merchData.forEach(item => {
+                const merchItem = document.createElement('div');
+                merchItem.classList.add('carousel-item');
+
+                merchItem.innerHTML = `
+                    <a href="${item.link}" target="_blank">
+                        <img src="${item.image}" alt="${item.product_name}">
+                        <p>${item.product_name}</p>
+                        <p>${item.price}</p>
+                    </a>
+                `;
+                carouselTrack.appendChild(merchItem);
+            });
+        }
+
         async function loadStream(service) {
-            const config = await loadConfig();  // Use the globally stored configData
+            const config = await loadConfig();
 
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
 
             const iframe = document.getElementById('live-stream');
-            
+
             if (service === 'youtube') {
                 iframe.src = youtubeEmbed;
             } else if (service === 'twitch') {
                 iframe.src = twitchEmbed;
             }
 
-            // Enable fullscreen
             iframe.setAttribute('allowfullscreen', 'true');
             iframe.setAttribute('allow', 'fullscreen');
         }
 
-        // Chat loader using configData
         async function loadChat() {
-            const config = await loadConfig();  // Use the globally stored configData
+            const config = await loadConfig();
 
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}&darkpopout`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
@@ -250,10 +302,11 @@
         }
 
         window.onload = async function() {
-            await loadStream('youtube');  // Autoload YouTube stream
-            await loadChat();  // Load chat only once
-            switchTab('youtube-chat');  // Default to YouTube chat
-            await loadMenu();  // Load menu only once
+            await loadStream('youtube');
+            await loadChat();
+            switchTab('youtube-chat');
+            await loadMenu();
+            await loadMerch();  // Load merchandise carousel
         }
     </script>
 </head>
@@ -262,7 +315,7 @@
         <div class="stream-container">
             <div class="stream-buttons">
                 <button class="menu-button" onclick="toggleSidebar()">
-                    <img src="menu.png" alt="Menu">
+                    <img src="../menu.png" alt="Menu">
                 </button>
                 <button class="youtube-btn" style="display:none" onclick="loadStream('youtube')">YouTube</button>
                 <button class="twitch-btn" style="display:none" onclick="loadStream('twitch')">Twitch</button>
@@ -289,5 +342,10 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
+    <!-- Merchandise Carousel -->
+    <div class="carousel-container">
+        <div class="carousel-track"></div>
+    </div>
+
 </body>
 </html>
