--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -113,12 +113,12 @@
         }
         iframe {
             width: 100%;
-            height: calc(80vh - 4rem);
+            height: calc(100vh - 4rem);
             border: none;
         }
         .chat-iframe {
             width: 100%;
-            height: calc(80vh - 4rem);
+            height: calc(100vh - 4rem);
             border: none;
         }
         .sidebar {
@@ -158,8 +158,8 @@
             width: 100%;
             overflow: hidden;
             background-color: #f8f9fa;
-            padding: 0.5rem 0;
-            margin-top: 1rem;
+            padding: 0.5rem 0; /* Decrease padding to reduce gap */
+            margin-top: -10px;  /* Bring the carousel closer to the page */
         }
 
         .carousel-track {
