--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -157,7 +157,7 @@
         .carousel-container {
             width: 100%;
             overflow: hidden;
-            background-color: #f8f9fa;
+            /* background-color: #f8f9fa; */
             padding: 0.5rem 0; /* Decrease padding to reduce gap */
             margin-top: -10px;  /* Bring the carousel closer to the page */
         }
